# pybotters

./: .coveragerc  .gitignore  .python-version  .readthedocs.yml  LICENCE  Pipfile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh  setup.sh
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish.yml  pytest.yml  python-package.yml
docs/: Advanced-Usage.rst  Contributing.rst  Example.rst  Exchanges.rst  Home.rst  Reference.rst  advanced.rst  conf.py  contributing.rst  examples.rst  exchanges.rst  index.rst  reference.rst  requirements.txt  user-guide.rst
docs/_templates/autosummary/: class.rst  module.rst
example/datastore/: binance.py  bitbank.py  bitflyer.py  bitget.py  bybit.py  coincheck.py  gmocoin.py  kucoin.py  okx.py  phemex.py  requirements.txt
example/helpers/: gmocoin.py
example/trading-bot/: bitflyer.py
examples/datastore/: binance.py  bitbank.py  bitflyer.py  bitget.py  bitmex.py  bybit.py  coincheck.py  extended.py  gmocoin.py  hyperliquid.py  kucoin.py  lighter.py  okx.py  phemex.py
examples/helpers/: bitbank.py  gmocoin.py
examples/open_orders/: coincheck.py
examples/order/: hyperliquid.py
examples/trading-bot/: bitflyer.py
pybotters/: __init__.py  auth.py  client.py  request.py  store.py  typedefs.py  ws.py
pybotters/_static_dependencies/toolz/: __init__.py
pybotters/experimental/: README.md  __init__.py  client.py  client_auth.py  client_reqrep.py  client_ws.py  exchange_auth.py  exchange_hosts.py  helpers.py  ws.py  ws_handlers.py
pybotters/experimental/exchange_handlers/: binance.py  gmocoin.py
pybotters/helpers/: __init__.py  bitbank.py  gmocoin.py  hyperliquid.py
pybotters/models/: __init__.py  aster.py  binance.py  bitbank.py  bitflyer.py  bitget.py  bitget_v2.py  bitmex.py  btcmex.py  bybit.py  bybit_v5.py  coincheck.py  experimental.py  extended.py  ftx.py  gmocoin.py  hyperliquid.py  kucoin.py  lighter.py  okx.py  phemex.py
pybotters/models/deprecated/: binance.py  bybit.py
pybotters/models/experimental/: __init__.py  bybit.py
pybotters/models/legacy/: gmocoin.py
requirements/: dependencies.txt  dev-docs.txt  dev-test.txt  dev.txt  docs.txt  lint.txt  runtime.txt  test.txt
scripts/: docs  format  lint  python-version  serve  static-dependencies  sync  test  test-all  typing
tests/: test_auth.py  test_client.py  test_datastore.py  test_helpers.py  test_hyperliquid.py  test_models.py  test_request.py  test_store.py  test_version.py  test_ws.py
