[metadata]
name = pybotters
version = 0.1.0
author = @MtkN1XBt
description = An advanced api client for python botters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MtkN1/pybotters
project_urls =
    Bug Tracker = https://github.com/MtkN1/pybotters/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    aiohttp
python_requires = >=3.7
